# brain

./: .gitignore  README.md  SETUP_INTEGRATION.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.py  simple_test.py  test_mcp_servers.py
documentation/: architecture.md  future_implementation.md  future_plan.md  future_state_prd.md  future_state_tdd.md  system_introduction.md
hf_client/: __init__.py  client.py
llm_engine/: __init__.py  engine.py
model_manager/: __init__.py  manager.py
src/: config.py  dependencies.py  main.py  server.py
src/agent/: __init__.py  engine.py  models.py  tasks.py  workflow.py
src/agent/agents/: __init__.py  base_agent.py  execution_agent.py  orchestrator_agent.py  planning_agent.py
src/api/: __init__.py  api.py  app.py  dependencies.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: __init__.py  documents.py  info.py  query.py
src/app/: __init__.py  coordinator.py  handler.py  models.py  session.py  streaming.py  tool_adapters.py  tool_bridge.py
src/engine/: __init__.py  base.py  factory.py
src/engine/implementations/: __init__.py  anthropic_engine.py  openai_engine.py
src/mcp_brain/: __init__.py  mcp_client.py
src/mcp_brain/servers/: devtools_server.py  exa_server.py  filesystem_server.py
src/tools/: client.py
src/tools/servers/: codebase_server.py  devtools_server.py  exa_server.py  filesystem_server.py  git_server.py
src/websocket_server/: __init__.py  server.py
task_plans/: README.md  example_task_plan.md  task_plan_template.md
tests/: conftest.py  test_codebase_tools.py  test_devtools_tools.py  test_exa_tools.py  test_filesystem_tools.py  test_git_tools.py  test_integration.py
