[tool.poetry]
name = "brain"
version = "0.1.0"
description = "SSE Server & AI Processing Engine"
authors = ["Creative Works"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.11,<0.116.0"
pydantic = ">=2.10.6,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
sse-starlette = ">=2.2.1,<3.0.0"
httpx = ">=0.28.1,<0.29.0"
uvicorn = ">=0.34.0,<0.35.0"
anthropic = "^0.49.0"
openai = "^1.72.0"
pydantic-settings = "^2.8.1"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
mypy = "^1.15.0"
isort = "^6.0.1"
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
